Fixing image padding on mobile

--- a/src/style/dateselect.css
+++ b/src/style/dateselect.css
@@ -60,6 +60,7 @@ input{
 
   .potd{
     max-width: 35vw;
+    padding: 5%;
   }
 
 }
